Can lookup for custom commands on pipeline_config SPA #1727
* CommandSnippets V1 API
* Widget to lookup for commands
* Exec command Args are either shown in textbox or textarea based on the
* type of args

--- a/server/webapp/WEB-INF/rails.new/config/requirejs.yml
+++ b/server/webapp/WEB-INF/rails.new/config/requirejs.yml
@@ -17,6 +17,7 @@ paths:
   string: 'lib/underscore.string'
   string-plus: 'lib/string-plus'
   domready: 'lib/requirejs.domReady'
+  shellwords: 'lib/shellwords'
   modernizr: 'vendor/modernizr'
   foundation: 'foundation/foundation'
   foundation.abide: 'foundation/foundation.abide'
