--- a/server/webapp/WEB-INF/rails.new/Gemfile
+++ b/server/webapp/WEB-INF/rails.new/Gemfile
@@ -21,6 +21,7 @@ gem 'js-routes'
 gem 'oauth2_provider', '1.0.3', path: 'vendor/engines/oauth2_provider'
 gem 'versionist'
 gem 'roar'
+gem 'autoprefixer-rails', '5.2.1.3'
 
 group :development, :test do
   gem 'rails-dev-tweaks', '~> 1.1'
